More minor site tweaks. Fixed digg and slashdot icons that looked fine on all browsers except IE, and looked fine on IE unless they were inserted via js.  Fixed banner width and make layout fluid again with improved background.

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -1,5 +1,19 @@
+#banner {
+    background-color: #0029B4;
+    float:left;
+    padding: 0;
+    margin: 0;
+    border:0;
+}
+#banner img {
+    border: 0;
+}
 #breadcrumbs {
-  padding: 0px 0px 0px 0px;
+  padding: 0;
+  margin: 0;
+  border:0;
+  color: white;
+  background-color: #0029B4;
 }
 body {
   padding: 0;
@@ -8,7 +22,6 @@ body {
  background: #fff;
  color: #000;
  padding: 0px 0px 10px 0px;
- width:1200px;
 }
 
 h2 {
